--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Website</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Mirror</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Website</h1>
-  </header>
+	<header>
+		<h1>Welcome to My Website</h1>
+	</header>
 
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I am a web developer passionate about creating amazing websites.</p>
-  </section>
+	<section>
+		<h2>About Me</h2>
+		<p>I am a web developer passionate about creating amazing websites.</p>
+	</section>
 
-  <footer>
-    <p>&copy; 2023 My Website. All rights reserved.</p>
-  </footer>
+	<footer>
+		<p>&copy; 2023 My Website. All rights reserved.</p>
+	</footer>
 
-  <script src="script.js"></script>
+	<script src="script.js"></script>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
